chore: 优化登录注册审核逻辑